[project]
name = "mcnptools"
version = "5.3.1" 
description = "MCNP Tools Python Wheels"
requires-python = ">=3.11"
authors = [
    {name = "Name", email = "email@example.com"}
]
license = {text = "BSD-3"}  

[build-system]
requires = [
    "scikit-build-core>=0.3.3",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/mcnptools"]
cmake.args = [
    "-DCMAKE_POLICY_DEFAULT_CMP0167=NEW",
    "-DPython_FIND_STRATEGY=LOCATION",
    "-DPython_FIND_IMPLEMENTATIONS=CPython",
    "-DPython_FIND_REGISTRY=NEVER"
]

[tool.cibuildwheel]
# This ensures Python 3.11
build = "cp311-*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = ["dnf install -y epel-release",
              "dnf install -y swig pcre-devel hdf5-devel boost-devel zlib-devel",
              "which python",
              "python --version",
              "python -c 'import sysconfig; print(sysconfig.get_path(\"include\"))'"
              ]

[tool.cibuildwheel.windows]
before-all = "choco install -y swig hdf5 boost-msvc-14.1"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["mcnptools"]

